--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
                 <li>あいうえお</li>
                 <li>かきくけこ</li>
                 <li>さしすせそ</li>
+                <li>なにぬねの</li>
             </ul>
 </body>
