ブランチ練習_別ブランチからさらに更新

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
                 <li>かきくけこ</li>
                 <li>さしすせそ</li>
                 <li>なにぬねの</li>
+                <li>やいゆえよ</li>
             </ul>
 </body>
