ブランチ練習_マージを他のブランチとも混ぜるよ

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
                 <li>さしすせそ</li>
                 <li>なにぬねの</li>
                 <li>やいゆえよ</li>
+                <li>らりるれろ</li>
             </ul>
 </body>
