--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li>あいうえお</li>
                 <li>かきくけこ</li>
                 <li>さしすせそ</li>
+                <li>たちつてと</li>
                 <li>なにぬねの</li>
                 <li>はひふへほ</li>
             </ul>
