履歴の削除の練習

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li>たちつてと</li>
                 <li>なにぬねの</li>
                 <li>はひふへほ</li>
+                <li>まみむめも</li>
                 <li>やいゆえよ</li>
                 <li>らりるれろ</li>
             </ul>
