履歴の削除の練習

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
                 <li>まみむめも</li>
                 <li>やいゆえよ</li>
                 <li>らりるれろ</li>
+                <li>わいうえを</li>
             </ul>
 </body>
