履歴の消去練習

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
                 <li>やいゆえよ</li>
                 <li>らりるれろ</li>
                 <li>わいうえを</li>
+                <li>がぎぐげご</li>
             </ul>
 </body>
